# weird-rust

./: README.md  evm_rpc.rs  icp_example.rs
evm/: lib.rs
evm_get_block/: README.md  dfx.json  evm_backend.did  evm_rpc.rs
evm_get_eth_id/: Cargo.toml  README.md  candid.did  dfx.json
evm_get_eth_id/src/: ecdsa.rs  lib.rs  state.rs  wallet.rs
