[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.13"
serde = "1.0.193"
serde_bytes = "0.11.12"
evm-rpc-canister-types = "0.1.2"
ic-crypto-ecdsa-secp256k1 = { git = "https://github.com/dfinity/ic", tag = "release-2024-06-26_23-01-base", package = "ic-crypto-ecdsa-secp256k1" }
ic-crypto-extended-bip32 = { git = "https://github.com/dfinity/ic", tag = "release-2024-06-26_23-01-base", package = "ic-crypto-extended-bip32" }
ic-crypto-sha3 = { git = "https://github.com/dfinity/ic", tag = "release-2024-06-26_23-01-base", package = "ic-crypto-sha3" }
ic-ethereum-types = { git = "https://github.com/dfinity/ic", tag = "release-2024-06-26_23-01-base", package = "ic-ethereum-types" }
getrandom = { version = "*", default-features = false, features = ["custom"] }
alloy-consensus = "0.1.3"
alloy-eips = "0.1.3"
alloy-primitives = "0.7.6"
num-traits = "0.2.19"